package edu.uhcl.blindsight.charactersheet

class Account {
    constructor () {

    }


}